--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.android.support:design:25.3.0'
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-ads:10.2.0'
 }
